--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Ayan Koley">
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="Portfolio" />
-    <meta property="og:url" content="https://ayank007.github.io/Portfolio" />
+    <meta property="og:url" content="https://ayank007.github.io/portfolio" />
     <meta property="og:title" content="Ayan Koley" />
     <meta property="og:video" content="https://www.youtube.com/watch?v=elO6JxIb5xU" />
     <meta property="og:description" content="Ayan Koley Professional Portfolio." />
